--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -24,6 +25,8 @@
         <activity android:name=".ContentPhotoActivity"/>
         <activity android:name=".ResultActivity"/>
         <activity android:name=".ContentTextActivity"/>
+        <activity android:name=".ContentWebActivity" />
+        <activity android:name=".ContentAudioActivity" />
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
